# search-engine

./: .gitignore  CMakeLists.txt  README.md  install.sh  package-lock.json  run.sh  search_engine  search_engine.cpp  server.js
crawler/: crawler.py  readme.txt
database/: Calamity Crabulon.txt  InvertedIndex.py  Minecraft.txt  ReadMe.txt  crawler.py  database.sql  install.sh  install_postgresql.sh  links.txt  requirements.txt  run.sh
src/: search_engine  search_engine.cpp  search_engine.h
website/: index.html  output.json  script.js  server.js  style.css
